Fallback text is no longer a fallback on mobile menu & cart icons. Drawer sits beneath Header. Header transitions as well, not just body of page

--- a/source/styles/02 timber/19 - Site Header.scss
+++ b/source/styles/02 timber/19 - Site Header.scss
@@ -2,7 +2,10 @@
   #Site Header
 ==============================================================================*/
 .site-header {
-  padding: ($gutter / 2) 0;
+  background: $colorBody;
+  > .wrapper {
+    padding: ($gutter / 2) 0;
+  }
 
   .grid--table {
     display: table;
